# Rust-Course

./: Cargo.toml  README.md  test.csv
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  chat.db-shm  chat.db-wal
server/src/: main.rs
shared/: Cargo.toml
shared/src/: client_error.rs  lib.rs  main.rs  server_error.rs
src/: main.rs
src/client/: main.rs
src/server/: main.rs
web/: Cargo.toml
web/src/: main.rs
