[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
shared = { path = "../shared" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full"] }